<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_upgrade_signal"
            android:icon="@drawable/ic_upgrade"
            android:title="@string/upgrade_signal"

            />
        <item
            android:id="@+id/nav_upgrade_analysis"
            android:icon="@drawable/ic_upgrade"
            android:title="@string/upgrade_analysis" />
        <item
            android:id="@+id/nav_upgrade_stock"
            android:icon="@drawable/ic_upgrade"
            android:title="@string/upgrade_stock" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/ic_disclaimer"
            android:title="@string/disclaimer"/>
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy"/>
    </group>
    <item
        android:id="@+id/app_bar_switch"
        android:icon="@drawable/ic_push"
        android:title="@string/push_notification"
        app:actionLayout="@layout/switch_item" />

</menu>